# eframe_template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  main.rs
