[package]
name = "eframe_template"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
	"default_fonts", # Embed the default egui fonts.
	"glow",          # Use the glow rendering backend. Alternative: "wgpu".
#	"persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

#serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # accessing the DOM to hide the loading text

[profile.release]
opt-level = 2 # fast and small wasm
